@@ -65,6 +65,16 @@ const static struct {
 	{ "DOCOMBO", "TRUE" },
 	{ "MAXMSGSPERCOMBO", "100" },
 	{ "SLEEPBETWEENMSGS", "0" },
+	{ "MAXMSG_STATUS", "256" },
+	{ "MAXMSG_CLIENT", "512" },
+	{ "MAXMSG_DATA", "256" },
+	{ "MAXMSG_NOTES", "256" },
+	{ "MAXMSG_ENADIS", "32" },
+	{ "MAXMSG_USER", "128" },
+	{ "MAXMSG_BFQ", "$MAXMSG_STATUS" },
+	{ "MAXMSG_PAGE", "$MAXMSG_STATUS" },
+	{ "MAXMSG_STACHG", "$MAXMSG_STATUS" },
+	{ "MAXMSG_CLICHG", "$MAXMSG_CLIENT" },
 	{ "SERVEROSTYPE", "$XYMONSERVEROS" },
 	{ "MACHINEDOTS", "$XYMONSERVERHOSTNAME" },
 	{ "MACHINEADDR", "$XYMONSERVERIP" },
